kubernetes/frontend/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
spec:
  # В кластере может быть несколько Ingress Controllers, мы используем NGINX      
  ingressClassName: "nginx"
  tls:
    - hosts:
        - "std-017-006.k8s.praktikum-services.tech"
  rules:
    - host: "std-017-006.k8s.praktikum-services.tech"
      http:
        # Для различных путей в URL можно указать различные бэкенд-сервисы
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              # Заранее создан сервис типа ClusterIP
              # Он выступает в качестве бэкенда нашего Ingress
              name: frontend
              port:
                # У сервиса может быть несколько портов, указываем нужный нам
                number: 8080
